[package]
name = "EJS"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = { version = "*", features = ["persistence"] }
egui_extras = { version = "*", features = ["all_loaders"] }
env_logger = "0.10.0"
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
rfd = "*"
snmalloc-rs = { version = "*", features = ["usecxx17", "build_cc"] }
polars = { version = "*", features = ["lazy","strings","cum_agg","timezones","temporal","dtype-datetime","dtype-duration","dtype-date", "dtype-time","diff"]}
anyhow = "1.0.75"
dashmap = { version = "5.5.3", features = ["rayon", "inline"] }
dicom = "*"
dicom-core = "*"
dicom-object = "*"
jwalk = "0.8.1"
rayon = "*"
dicom-pixeldata = {version="*",features=["image","ndarray"]}
ndarray = "*"
zip = "0.6.6"
egui-notify = "0.10.0"
chrono = "0.4.31"
csv = "*"
splines = "*"


[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

